@@ -7,7 +7,6 @@ ptc.setupPloneSite()
 from plone.locking.interfaces import ILockable
 from zope.component import getUtility
 from zope.interface import directlyProvides
-from zope.app.publisher.interfaces.browser import IBrowserMenu
 
 from Products.CMFCore.Expression import Expression
 from Products.CMFCore.utils import getToolByName
@@ -20,6 +19,12 @@ from plone.app.contentmenu.interfaces import IActionsMenu
 from plone.app.contentmenu.interfaces import IDisplayMenu
 from plone.app.contentmenu.interfaces import IFactoriesMenu
 from plone.app.contentmenu.interfaces import IWorkflowMenu
+
+# BBB Zope 2.12
+try:
+    from zope.browsermenu.interfaces import IBrowserMenu
+except ImportError:
+    from zope.app.publisher.interfaces.browser import IBrowserMenu
 
 
 class TestActionsMenu(ptc.PloneTestCase):
@@ -583,7 +588,11 @@ class TestContentMenu(ptc.PloneTestCase):
 class TestDisplayViewsMenu(PlacelessSetup, unittest.TestCase):
 
     def setUp(self):
-        from Products.Five import zcml
+        # BBB for Zope 2.12
+        try:
+            from Zope2.App import zcml
+        except ImportError:
+            from Products.Five import zcml
         import Products.Five
         import plone.app.contentmenu
         zcml.load_config("meta.zcml", Products.Five)
