@@ -1,11 +1,16 @@
 from zope.component import getUtility
 from zope.interface import implements
 from zope.contentprovider.provider import ContentProviderBase
-from zope.app.publisher.interfaces.browser import IBrowserMenu
 
 from Products.Five.browser.pagetemplatefile import ViewPageTemplateFile
 
 from plone.app.contentmenu.interfaces import IContentMenuView
+
+# BBB Zope 2.12
+try:
+    from zope.browsermenu.interfaces import IBrowserMenu
+except ImportError:
+    from zope.app.publisher.interfaces.browser import IBrowserMenu
 
 
 class ContentMenuProvider(ContentProviderBase):
